[gd_scene load_steps=16 format=2]

[ext_resource path="res://SHADERS/Outline.shader" type="Shader" id=1]
[ext_resource path="res://ASSETS/SOUND/MUSIC/INGAME.wav" type="AudioStream" id=2]
[ext_resource path="res://SCRIPTS/TMP/CAMERA.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/SOUND/FX/AMBIANCE/Kindergarten.wav" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/GRAPHICS/TMP/Alien.png" type="Texture" id=5]
[ext_resource path="res://SCENES/FX/Beam_Down.tscn" type="PackedScene" id=6]
[ext_resource path="res://SCRIPTS/TMP/PAPA_PLAYER_FREEZING.gd" type="Script" id=7]
[ext_resource path="res://SCENES/BACKGROUND/Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://ASSETS/GRAPHICS/ANIMATIONS/FX/FREEZING/Freezing_back.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/SOUND/FX/TALENTS/Freezing.wav" type="AudioStream" id=10]
[ext_resource path="res://ASSETS/GRAPHICS/ANIMATIONS/FX/FREEZING/Freezing_front.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.99994
height = 28.0001

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/ready = null
shader_param/cooldown = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Freezing_Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Freezing_Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Freezing_Back:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Freezing_Front:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Freezing_Back:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Freezing_Front:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "freezing"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Freezing_Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 0.2, 0.2 ), Vector2( 0.325, 0.325 ), Vector2( 0.45, 0.45 ), Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Freezing_Front:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.125, 0.125 ), Vector2( 0.2, 0.2 ), Vector2( 0.325, 0.325 ), Vector2( 0.45, 0.45 ), Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Freezing_Back:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.696078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.25098 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Freezing_Front:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.696078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.25098 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Freezing_Back:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Freezing_Front:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 2 ]
}
tracks/6/type = "audio"
tracks/6/path = NodePath("FX")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[node name="SceneTEST" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="BG_AMBIANCE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true
bus = "AMBIANCE"

[node name="MUSIC" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "MUSIC"

[node name="Background" parent="." instance=ExtResource( 8 )]
__meta__ = {
"_edit_lock_": true
}

[node name="PAPA_PLAYER" type="KinematicBody2D" parent="."]
position = Vector2( 720, 405 )
collision_layer = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Alien_Collider" type="CollisionShape2D" parent="PAPA_PLAYER"]
light_mask = 2
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PLAYER" type="Node2D" parent="PAPA_PLAYER"]
position = Vector2( 0, -15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Intro Alien" parent="PAPA_PLAYER/PLAYER" instance=ExtResource( 6 )]

[node name="Shadow" type="Polygon2D" parent="PAPA_PLAYER/PLAYER"]
visible = false
position = Vector2( -7.22192, -9.71426 )
scale = Vector2( 1.11855, 0.857143 )
color = Color( 0, 0.1, 0, 0.392157 )
polygon = PoolVector2Array( -14.9999, 44.056, -13.1739, 40.92, -10.0588, 38.5556, -1.82355, 37.0001, 6.41174, 37, 13.8235, 37.0001, 21.6548, 38.1666, 26.1249, 40.5, 27.913, 44, 26.1249, 46.3333, 20.4117, 49.4445, 13, 51, 5.08691, 51, -1.82355, 51, -10.0588, 49.4445, -13.1739, 47.192 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cooldown_Timer" type="Timer" parent="PAPA_PLAYER/PLAYER"]
wait_time = 5.0
one_shot = true

[node name="Freezing_Back" type="Sprite" parent="PAPA_PLAYER/PLAYER"]
visible = false
position = Vector2( 0, 14.25 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 9 )
hframes = 3
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="The Alien (with OUTLINE shader)" type="Sprite" parent="PAPA_PLAYER/PLAYER"]
visible = false
material = SubResource( 1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Freezing_Front" type="Sprite" parent="PAPA_PLAYER/PLAYER"]
visible = false
position = Vector2( 0, 14.25 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )
hframes = 3
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PAPA_PLAYER/PLAYER"]
anims/RESET = SubResource( 5 )
anims/freezing = SubResource( 4 )

[node name="FX" type="AudioStreamPlayer" parent="PAPA_PLAYER/PLAYER"]
stream = ExtResource( 10 )
bus = "FX"

[node name="CAMERA" type="Camera2D" parent="."]
position = Vector2( 720, 405 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1440
limit_bottom = 810
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="PAPA_PLAYER/PLAYER/Cooldown_Timer" to="PAPA_PLAYER" method="_on_Cooldown_Timer_timeout"]
